solc_mutator_ossfuzz_seed_corpus/test_sol/test_fa9bf429ac355c700b43d5dadcb87283cb4ccf1c32ca61f40ab545cbc55a968d_5b8660abb2a8369e29739b1511b5a6872fad174c_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0() 
{ }
function f1(uint16 i0,bool i1)  returns(uint104 o0,bool o1,bytes30 o2)
{
  {
  }
  f0();
  o0 |= ((11565449846376310876886856291914 << (6912424036746168803535479886551 ^ 5795163906483304310594053218697)) << (12078800451910055675868461541689 << 420921362360099747676109764407));
  {

f0();
  }
}
contract C0 {
}
// ----
// TypeError 2271: (su0.sol:118-221): Operator << not compatible with types int_const 11565449846376310876886856291914 and int_const 2384910964282878771944511632222
// TypeError 2271: (su0.sol:227-293): Operator << not compatible with types int_const 12078800451910055675868461541689 and int_const 420921362360099747676109764407
// TypeError 2271: (su0.sol:117-294): Operator << not compatible with types int_const 11565449846376310876886856291914 and int_const 12078800451910055675868461541689
